# BioHORIZON-insights-from-nasa-space-biology

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
BioHorizon/: db.sqlite3  manage.py  requirements.txt
BioHorizon/BioHorizon/: asgi.py  settings.py  urls.py  wsgi.py
BioHorizon/mainapp/: urls.py  views.py
BioHorizon/mainapp/templates/mainapp/: about.html  base.html  details.html  index.html
BioHorizon/services/: data_handler.py  gpt_agent.py
BioHorizon/static/css/: styles.css
ai_agent/: agent  prompts.py
biohorizon/: asgi.py  enhanced_osd_metadata.jsonl  settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/services/: data_handler.py  gpt_agent.py  osd_downloader.py
main/static/css/: style.css
main/static/data/: osd-gpt
main/templates/: about.html  base.html  home.html  paper.html
services/: data_handler.py  gpt_agent.py  prompts.py
src/: environment.py  utils.py
src/chatbot/biohor_agent/: agent.py  prompts.py
src/chatbot/chainlit_webapp/: fake_client.py  main.py
src/chatbot/pydantic/: agent.py
src/database/: query.py  structure.py  utils.py  wrapper.py
src/services/: gpt_agent.py  prompts.py
