[project]
name = "biohorizon-insights-from-nasa-space-biology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ag-ui-protocol==0.1.9",
    "chainlit>=2.8.3",
    "langchain-huggingface>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.6.0",
    "qdrant-client>=1.15.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]
